# chimuelo_expressions

./: CMakeLists.txt  package.xml
scripts/: face_displayer.py
videos/: Blink.mov  Confused.mov  Excited.mov  Finding.mov  Gossip.mov  Surprise.mov  Talkie Talkie.mov  Urgent Message.mov  Wise Guy.mov
